# unipac

./: README.md  analise-de-sistemas-ii.html  arquitetura-de-computadores.html  index.html  programacao-orientada-a-objetos.html  projeto-experimental-ii-2020-1.html  sobre.html  tecnicas-de-programacao-2017-2.html  tecnicas-de-programacao-2018-1.html  tecnicas-de-programacao-2019-1.html  tecnicas-de-programacao-2020-1.html  tecnicas-de-programacao.html
disciplinas/analise-de-sistemas-ii/: README.md
disciplinas/arquitetura-de-computadores/: cap1.html  cap10.html  cap11.html  cap12.html  cap13.html  cap14.html  cap15.html  cap2.html  cap3.html  cap4.html  cap5.html  cap6.html  cap7.html  cap8.html  cap9.html  index.html  package.json
disciplinas/disciplinas-lip/: lipossomas-06-06-2018.md
disciplinas/tecnicas-de-programacao/c-codes/: CMakeLists.txt
disciplinas/tecnicas-de-programacao/c-codes/cap6/: 07.c
disciplinas/tecnicas-de-programacao/c-codes/cap8/: 04.c  05.c  06.c  07.c  08.c  09.c  10.c
disciplinas/tecnicas-de-programacao/c-codes/carry/: verifica-carry.c
disciplinas/tecnicas-de-programacao/c-codes/fatorial/: fatorial.c  fatorial_recursivo.c
disciplinas/tecnicas-de-programacao/c-codes/funcoes/: calculadora.c  calculadora.h  escopo.c  main-calc.c
disciplinas/tecnicas-de-programacao/c-codes/lista/: ex1.c  ex2.c  ex3.c  ex4.c  teste.c
disciplinas/tecnicas-de-programacao/c-codes/primos/: gera-primo.c  verifica-primo.c
disciplinas/tecnicas-de-programacao/c-codes/vetor/: exvetor.c  printVetor.c
latex/: teste.dvi  teste.tex  unipac.cls
(+408 files in other folders)
